# ScrnshotMgr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ScrnMgr.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  scrnshotmgr.rc
configmanager/: configmanager.cpp  configmanager.h
logcat/: logcat.cpp  logcat.h
snapper/: snapper.cpp  snapper.h
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/configmanager/: configmanager.cpp  configmanager.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
src/logcat/: logcat.cpp  logcat.h
src/snapper/: drawsnap.cpp  drawsnap.h  snapcrop.cpp  snapcrop.h  snapinterface.cpp  snapinterface.h  snapinterface.ui  snapper.cpp  snapper.h  snapwindow.cpp  snapwindow.h  snapwindow.ui
src/themes/: dark.qss
src/ui_components/: logtextedit.cpp  logtextedit.h
src/ui_components/capture/: capturecontainer.cpp  capturecontainer.h  captureitem.cpp  captureitem.h  capturerenderer.cpp  capturerenderer.h  capturesimple.cpp  capturesimple.h
src/ui_components/presets/: presetobject.cpp  presetobject.h
src/ui_components/presets/editor/: preseteditor.cpp  preseteditor.h  preseteditor.ui
src/utils/: utils.cpp  utils.h
ui_components/: logtextedit.cpp
